--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,10 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container
+            {
+                max-width:400px;
+                margin:0;
+                color:grey;
+                font-family:san-sarif;
+            }
